# CRPropa3

./: CMakeLists.txt
include/: CRPropa.h
include/crpropa/: #Vector3.h#  Candidate.h  Grid.h  Grid2.h  Grid3.h  Grid4.h  Vector3.h
include/crpropa/magneticField/turbulentField/: TurbulentField.h
include/crpropa/module/: Output.h  SearchMagMirror.h  TextOutput.h
libs/qd/: CMakeLists.txt
libs/qd/include/qd/: bits.h  c_dd.h  c_qd.h  config.h  dd_inline.h  dd_real.h  fpu.h  qd_inline.h  qd_real.h
libs/qd/src/: bits.cpp  c_dd.cpp  c_qd.cpp  dd_const.cpp  dd_real.cpp  fpu.cpp  qd_const.cpp  qd_real.cpp  util.cpp
python/: 2_headers.i
src/: Candidate.cpp
src/module/: PropagationBP.cpp  PropagationCK.cpp  SearchMagMirror.cpp  TextOutput.cpp
test/: testCore.cpp  testOutput.cpp
